feat: Доработка механизма ролевых групп
