# main-server/docs/docs_swagger2.yaml
@@ -1339,12 +1339,13 @@
           type: "string"
           description: "Токен доступа"
         refresh_token: 
-          $ref: "#/definitions/ModuleDto"
+          type: "string"
+          description: "Токен обновления"
         type_auth: 
           type: "number"
           description: "Тип авторизации пользователя"
-        attributes: 
-          $ref: "#/definitions/AttributeDto"
+        roles: 
+          $ref: "#/definitions/RoleDto"
     LogoutDto: 
       required: 
         - "access_token"
@@ -1360,29 +1361,6 @@
         type_auth: 
           type: "number"
           description: ""
-    ModuleDto: 
-      properties: 
-        player: 
-          type: "boolean"
-          description: ""
-        judge: 
-          type: "boolean"
-          description: ""
-        creator: 
-          type: "boolean"
-          description: ""
-        moderator: 
-          type: "boolean"
-          description: ""
-        manager: 
-          type: "boolean"
-          description: ""
-        admin: 
-          type: "boolean"
-          description: ""
-        super_admin: 
-          type: "boolean"
-          description: ""
     RefreshDto: 
       required: 
         - "refresh_token"
@@ -1392,6 +1370,17 @@
           type: "string"
           description: ""
         type_auth: 
+          type: "number"
+          description: ""
+    RoleDto: 
+      properties: 
+        id: 
+          type: "number"
+          description: ""
+        value: 
+          type: "string"
+          description: ""
+        priority: 
           type: "number"
           description: ""
     SignInDto: 
@@ -1678,8 +1667,6 @@
         users_id: 
           type: "number"
           description: ""
-        modules: 
-          $ref: "#/definitions/ModuleDto"
         email: 
           type: "string"
           description: ""
